// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rateLimitDirective limiting a repeated object 1`] = `
Object {
  "data": Object {
    "books": Array [
      Object {
        "title": "A Game of Thrones",
      },
      Object {
        "title": "The Hobbit",
      },
    ],
  },
}
`;

exports[`rateLimitDirective limiting a specific field 1`] = `
Object {
  "data": Object {
    "quote": "The future is something which everyone reaches at the rate of sixty minutes an hour, whatever he does, whoever he is. ― C.S. Lewis",
  },
}
`;

exports[`rateLimitDirective limiting default override uses custom keyGenerator 1`] = `
Object {
  "data": Object {
    "quote": "The future is something which everyone reaches at the rate of sixty minutes an hour, whatever he does, whoever he is. ― C.S. Lewis",
  },
}
`;

exports[`rateLimitDirective limiting default override uses custom onLimit 1`] = `
Object {
  "data": Object {
    "quote": "So comes snow after fire, and even dragons have their endings. ― Bilbo Baggins",
  },
}
`;

exports[`rateLimitDirective limiting default override uses custom pointsCalculator 1`] = `
Object {
  "data": Object {
    "quote": "The future is something which everyone reaches at the rate of sixty minutes an hour, whatever he does, whoever he is. ― C.S. Lewis",
  },
}
`;

exports[`rateLimitDirective limiting each field of an object 1`] = `
Object {
  "data": Object {
    "books": Array [
      Object {
        "title": "A Game of Thrones",
      },
      Object {
        "title": "The Hobbit",
      },
    ],
    "quote": "The future is something which everyone reaches at the rate of sixty minutes an hour, whatever he does, whoever he is. ― C.S. Lewis",
  },
}
`;

exports[`rateLimitDirective limiting field extension override uses custom keyGenerator 1`] = `
Object {
  "data": Object {
    "quote": "The future is something which everyone reaches at the rate of sixty minutes an hour, whatever he does, whoever he is. ― C.S. Lewis",
  },
}
`;

exports[`rateLimitDirective limiting field extension override uses custom onLimit 1`] = `
Object {
  "data": Object {
    "quote": "So comes snow after fire, and even dragons have their endings. ― Bilbo Baggins",
  },
}
`;

exports[`rateLimitDirective limiting field extension override uses custom pointsCalculator 1`] = `
Object {
  "data": Object {
    "quote": "The future is something which everyone reaches at the rate of sixty minutes an hour, whatever he does, whoever he is. ― C.S. Lewis",
  },
}
`;
